# qa_quru_3_21_mobile

./: .gitignore  config.browser.env  config.emulation.env  config.py  pyproject.toml
tests/: conftest.py  test_emulator.py  test_wikipedia.py
utils2/: file.py
